fix: fixing admin layout shift in progress - now fix is bad [WTEL-2406]

--- a/src/app/css/objects/objects.scss
+++ b/src/app/css/objects/objects.scss
@@ -1,9 +1,3 @@
-@import 'lib-custom-styling/dropzone';
-@import "../main";
-
-@import 'table-page';
-@import 'history-popup';
-
 // ----- new styles
 
 .tabs-page-wrapper {
@@ -133,35 +127,6 @@
   grid-template-columns: 1fr 1fr 24px;
   grid-gap: 20px;
   margin-bottom: 20px;
-}
-
-// used both in tags input and select dropdowns
-.select-options {
-  @extend .box-shadow;
-  @extend .scrollbar;
-
-  position: absolute;
-  width: 100%;
-  max-height: 190px;
-  padding: 8px 0;
-  margin-top: 8px;
-  background: #fff;
-  overflow-y: auto;
-  z-index: 10;
-
-  .select-option {
-    @extend %typo-body-2;
-
-    div {
-      padding: 12px 16px 11px;
-      cursor: pointer;
-    }
-
-    &.select-option__selected, &:hover {
-      color: #000;
-      background: rgba(0, 0, 0, 0.05);
-    }
-  }
 }
 
 .module-new .object-input-grid .select-preview {
